# market-making-lab

./: .gitignore  Cargo.toml  Makefile  PROVENANCE.md  README.md  THIRD_PARTY_NOTICES.md  data_exploration.ipynb  ob_backtest.ipynb  ob_backtest.py  requirements-research.txt  tickers.json
.github/workflows/: ci.yml
data_pipeline/: 1_convert.py  2_latency.py  convert_config.example.yaml  convert_config.yaml  data_exploration.ipynb  data_pipeline.py  latency_config.example.yaml  latency_config.yaml
examples/: gridtrading_backtest.rs  gridtrading_backtest_args.rs
fixtures/: synthetic_l2.csv
pipeline/: 0_ticker.py  1_2_convert_latency.py  1_convert.py  2_latency.py  3_backtest.py  3_snapshot.py  4_backtest.py  5_gridsearch.py  6_analyze_gridsearch.py  6_stats.py  6_summary.py  backtest_config.yaml  convert_config.yaml  convert_latency_config.yaml  gridsearch_config.yaml  latency_config.yaml  pipeline.yaml  snapshot_config.yaml  snapshot_manifest.py  snapshot_validator.py  ticker_6.json  ticker_8.json  tickers.json  tickers_usdc.json
pipeline/templates/: backtest_config.example.yaml  backtest_config.exmple.yaml  comvert_latency_config.example.yaml  convert_config.example.yaml  convert_latency_config.example.yaml  latency_config.example.yaml
pipeline/util/: ticker_helper.py
src/: algo.rs  lib.rs  main.rs  synthetic.rs
tests/: test_gridsearch_pipeline.py  test_synthetic_pipeline.py
